// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisablePopup component tests snapshot testing for no process-management addon and only service URL 1`] = `
<div>
  <div
    class="pf-c-check pf-m-standalone"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-4"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`DisablePopup component tests snapshot testing for no service URL and no process-management addon 1`] = `
<div>
  <div
    class="pf-c-check pf-m-standalone"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-2"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`DisablePopup component tests snapshot testing for no service URL and only process-management addon 1`] = `
<div>
  <div
    class="pf-c-check pf-m-standalone"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-1"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`DisablePopup component tests snapshot testing for service URL and process-management addon available 1`] = `
<div>
  <div
    class="pf-c-check pf-m-standalone"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-3"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;
